--- a/app/src/main/res/layout/row_unpaid_transactions.xml
+++ b/app/src/main/res/layout/row_unpaid_transactions.xml
@@ -27,6 +27,7 @@
         android:layout_marginEnd="@dimen/space_16"
         android:background="@{data.selected?@drawable/shape_cart_view_selected:@drawable/shape_cart_view}"
         android:elevation="@dimen/space_2"
+        android:onClick="@{data.onSelected}"
         android:padding="@dimen/space_8">
 
         <TextView
@@ -36,8 +37,8 @@
             android:layout_marginEnd="8dp"
             android:maxLines="2"
             android:minLines="2"
-            android:text="@{data.name}"
             android:onClick="@{data.openFundDetails}"
+            android:text="@{data.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
             app:layout_constraintEnd_toStartOf="@id/barrier"
