--- a/app/src/main/res/layout/fragment_home_invest.xml
+++ b/app/src/main/res/layout/fragment_home_invest.xml
@@ -111,12 +111,11 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:layout_marginTop="@dimen/space_8"
                     android:id="@+id/img_arrow"
                     android:layout_alignParentEnd="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_right_arrow"/>
+                    android:layout_width="@dimen/_32sdp"
+                    android:layout_height="@dimen/_32sdp"
+                    android:src="@drawable/ic_keyboard_arrow_right_dark_gray"/>
 
             </RelativeLayout>
 
@@ -180,12 +179,11 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:layout_marginTop="@dimen/space_8"
                     android:id="@+id/img_arrow1"
                     android:layout_alignParentEnd="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_right_arrow"/>
+                    android:layout_width="@dimen/_32sdp"
+                    android:layout_height="@dimen/_32sdp"
+                    android:src="@drawable/ic_keyboard_arrow_right_dark_gray"/>
 
             </RelativeLayout>
 
