"1: Integrate the get all conversation APIs. 2: Integrate the API to close the ticket when the push notification comes and the user opts to close the ticket. "

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -43,6 +43,8 @@
             android:layout_height="0dp"
             android:clipToPadding="false"
             android:paddingTop="@dimen/default_space"
+            android:paddingBottom="@dimen/default_space"
+            dividerV="@{@drawable/shape_transferant_divider_16dp}"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/mDivider1"
             app:layout_constraintStart_toStartOf="parent"
