--- a/app/src/main/res/layout/row_admin_image.xml
+++ b/app/src/main/res/layout/row_admin_image.xml
@@ -13,18 +13,17 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/_56sdp"
-        tools:paddingTop="@dimen/default_space"
+        android:paddingStart="@dimen/default_space"
+        android:paddingTop="@dimen/default_space"
         android:paddingEnd="@dimen/default_space"
-        tools:paddingBottom="@dimen/default_space">
+        android:paddingBottom="@dimen/default_space">
 
         <TextView
             android:id="@+id/tvDateTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{msg.time}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="25-03-2019 04:54PM" />
 
@@ -34,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvDateTime"
-            android:layout_marginStart="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_4sdp"
             android:layout_marginTop="@dimen/_4sdp"
             android:layout_marginBottom="@dimen/_4sdp"
             android:adjustViewBounds="true"
@@ -42,8 +41,8 @@
             android:elevation="2dp"
             android:padding="@dimen/_8sdp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/guideline8"
+            app:layout_constraintEnd_toStartOf="@id/guideline8"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvDateTime"
             tools:src="@drawable/temp_article_details" />
 
@@ -52,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.3" />
+            app:layout_constraintGuide_percent="0.7" />
 
 
     </android.support.constraint.ConstraintLayout>
