--- a/app/src/main/res/layout/row_admin_message.xml
+++ b/app/src/main/res/layout/row_admin_message.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="msg"
-            type="com.tarrakki.module.support.chat.ChatMessage" />
+            type="com.tarrakki.api.model.SupportChatResponse.Data.Conversation" />
     </data>
 
     <RelativeLayout
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@id/ivTriangle"
-            android:text="@{msg.dateTime}"
+            android:text="@{msg.time}"
             tools:text="25-03-2019 04:54PM" />
 
         <ImageView
@@ -52,7 +52,7 @@
             android:background="@drawable/shape_cart_view"
             android:elevation="2dp"
             android:padding="@dimen/_8sdp"
-            android:text="@{msg.message}"
+            android:text="@{msg.msg}"
             android:textColor="@color/black"
             android:textIsSelectable="true"
             app:copyToClipBoard="@{true}"
