1: Download image/file in the local device storage. 2: Open the downloaded file from the ticket conversation screen. 3: Show the progress for downloading the image/file.

--- a/app/src/main/res/layout/row_admin_image.xml
+++ b/app/src/main/res/layout/row_admin_image.xml
@@ -29,12 +29,13 @@
 
         <ImageView
             android:id="@+id/tvMessage"
+            imageDialog="@{msg.img}"
             imgUrl="@{msg.img}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvDateTime"
-            android:layout_marginEnd="@dimen/_4sdp"
             android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_4sdp"
             android:layout_marginBottom="@dimen/_4sdp"
             android:adjustViewBounds="true"
             android:background="@drawable/shape_cart_view"
