--- a/app/src/main/res/layout/row_admin_file.xml
+++ b/app/src/main/res/layout/row_admin_file.xml
@@ -15,19 +15,18 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/_56sdp"
-        android:paddingEnd="@dimen/default_space"
-        tools:paddingBottom="@dimen/default_space"
-        tools:paddingTop="@dimen/default_space">
+        android:paddingStart="@dimen/default_space"
+        android:paddingTop="@dimen/default_space"
+        android:paddingEnd="@dimen/_56sdp"
+        android:paddingBottom="@dimen/default_space">
 
         <TextView
             android:id="@+id/tvDateTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_toStartOf="@id/ivTriangle"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@id/ivTriangle"
             android:text="@{msg.time}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             tools:text="25-03-2019 04:54PM" />
 
         <ImageView
@@ -35,10 +34,11 @@
             android:layout_width="@dimen/_12sdp"
             android:layout_height="@dimen/_12sdp"
             android:layout_below="@id/tvDateTime"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
             android:layout_marginTop="@dimen/_15sdp"
             android:adjustViewBounds="true"
             android:elevation="2dp"
+            android:rotation="180"
             android:src="@drawable/ic_triangle_right"
             android:tint="@color/white" />
 
@@ -47,10 +47,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvDateTime"
-            android:layout_marginStart="@dimen/_4sdp"
             android:layout_marginTop="@dimen/_4sdp"
             android:layout_marginBottom="@dimen/_4sdp"
-            android:layout_toStartOf="@id/ivTriangle"
+            android:layout_toEndOf="@id/ivTriangle"
             android:background="@drawable/shape_cart_view"
             android:elevation="2dp"
             android:orientation="vertical">
@@ -80,8 +79,8 @@
 
             <ProgressBar
                 style="?android:attr/progressBarStyleSmall"
-                android:layout_width="10dp"
-                android:layout_height="13dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_8sdp"
                 android:visibility="@{msg.downloadProgressVisibility?View.INVISIBLE:View.GONE}"
                 app:layout_constraintBottom_toBottomOf="@id/tvFileImg"
@@ -117,5 +116,7 @@
 
         </android.support.constraint.ConstraintLayout>
 
+
     </RelativeLayout>
+
 </layout>
