1: Clear all the cache of the different files downloaded for the ticket when the user log out from the app. 2: Implement the pagination in the ticket conversation screen.

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -49,7 +49,7 @@
             app:layout_constraintBottom_toTopOf="@+id/mDivider1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mDivider"
-            app:reverseLayout="false"
+            app:reverseLayout="true"
             app:stackFromEnd="true"
             tools:itemCount="5"
             tools:listitem="@layout/row_sender_message" />
