--- a/app/src/main/res/layout/row_sender_file.xml
+++ b/app/src/main/res/layout/row_sender_file.xml
@@ -15,6 +15,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:paddingStart="@dimen/_56sdp"
         android:paddingEnd="@dimen/default_space"
         tools:paddingBottom="@dimen/default_space"
@@ -83,6 +85,8 @@
                 android:layout_width="10dp"
                 android:layout_height="13dp"
                 android:layout_marginStart="@dimen/_8sdp"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:visibility="@{msg.downloadProgressVisibility?View.VISIBLE:View.GONE}"
                 app:layout_constraintBottom_toBottomOf="@id/tvFileImg"
                 app:layout_constraintStart_toEndOf="@id/tvFileImg"
@@ -106,6 +110,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
                 android:onClick="@{msg.onOpen}"
