--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -37,22 +37,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvRefNo" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvChat"
-            dividerV="@{@drawable/shape_transferant_divider_16dp}"
+        <RelativeLayout
+            android:id="@+id/frmRV"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:clipToPadding="false"
-            android:paddingTop="@dimen/default_space"
-            android:paddingBottom="@dimen/default_space"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/mDivider1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mDivider"
-            app:reverseLayout="true"
-            app:stackFromEnd="true"
-            tools:itemCount="5"
-            tools:listitem="@layout/row_sender_message" />
+            app:layout_constraintTop_toBottomOf="@id/mDivider">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvChat"
+                dividerV="@{@drawable/shape_transferant_divider_16dp}"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:paddingTop="@dimen/default_space"
+                android:paddingBottom="@dimen/default_space"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                app:reverseLayout="true"
+                app:stackFromEnd="false"
+                tools:itemCount="5"
+                tools:listitem="@layout/row_sender_message" />
+
+        </RelativeLayout>
 
         <View
             android:id="@+id/mDivider1"
@@ -99,9 +106,11 @@
             android:padding="@dimen/_6sdp"
             android:rotation="60"
             android:src="@drawable/ic_file_attachment"
+            android:visibility="@{vm.btnAttahcmentVisibility}"
             app:layout_constraintBottom_toBottomOf="@id/edtMessage"
             app:layout_constraintEnd_toStartOf="@id/ivGallery"
-            app:layout_constraintTop_toTopOf="@id/ivGallery" />
+            app:layout_constraintTop_toTopOf="@id/ivGallery"
+            tools:visibility="visible" />
 
         <ImageView
             android:id="@+id/ivGallery"
@@ -110,6 +119,7 @@
             android:layout_marginEnd="1dp"
             android:padding="@dimen/_6sdp"
             android:src="@drawable/ic_camera_black"
+            android:visibility="@{vm.btnAttahcmentVisibility}"
             app:layout_constraintBottom_toBottomOf="@id/edtMessage"
             app:layout_constraintEnd_toStartOf="@id/ivSend"
             app:layout_constraintTop_toTopOf="@id/ivSend" />
@@ -122,7 +132,8 @@
             android:src="@drawable/ic_send_msg"
             app:layout_constraintBottom_toBottomOf="@id/edtMessage"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/view" />
+            app:layout_constraintTop_toTopOf="@+id/view"
+            app:layout_constraintVertical_bias="1" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
