--- a/app/src/main/res/layout/row_admin_file.xml
+++ b/app/src/main/res/layout/row_admin_file.xml
@@ -15,6 +15,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:paddingStart="@dimen/default_space"
         android:paddingTop="@dimen/default_space"
         android:paddingEnd="@dimen/_56sdp"
@@ -82,6 +84,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_8sdp"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:visibility="@{msg.downloadProgressVisibility?View.VISIBLE:View.GONE}"
                 app:layout_constraintBottom_toBottomOf="@id/tvFileImg"
                 app:layout_constraintStart_toEndOf="@id/tvFileImg"
@@ -105,6 +109,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
                 android:onClick="@{msg.onOpen}"
