--- a/app/src/main/res/layout/row_admin_message.xml
+++ b/app/src/main/res/layout/row_admin_message.xml
@@ -13,6 +13,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:paddingStart="@dimen/default_space"
         android:paddingTop="@dimen/default_space"
         android:paddingEnd="@dimen/_56sdp"
