--- a/app/src/main/res/layout/row_sender_image.xml
+++ b/app/src/main/res/layout/row_sender_image.xml
@@ -13,6 +13,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:paddingStart="@dimen/_56sdp"
         android:paddingEnd="@dimen/default_space"
         tools:paddingBottom="@dimen/default_space"
@@ -28,33 +30,31 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="25-03-2019 04:54PM" />
 
-        <ImageView
-            android:id="@+id/tvMessage"
-            imageDialog="@{msg.img}"
-            imgUrl="@{msg.img}"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvDateTime"
+        <FrameLayout
+            android:layout_width="@dimen/_172sdp"
+            android:layout_height="@dimen/_172sdp"
             android:layout_marginStart="@dimen/_4sdp"
             android:layout_marginTop="@dimen/_4sdp"
             android:layout_marginBottom="@dimen/_4sdp"
-            android:adjustViewBounds="true"
             android:background="@drawable/shape_cart_view"
             android:elevation="2dp"
             android:padding="@dimen/_8sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/guideline8"
-            app:layout_constraintTop_toBottomOf="@id/tvDateTime"
-            tools:src="@drawable/temp_article_details" />
+            app:layout_constraintTop_toBottomOf="@id/tvDateTime">
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.3" />
+            <ImageView
+                android:id="@+id/tvMessage"
+                imageDialog="@{msg.img}"
+                imgUrl="@{msg.img}"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:scaleType="center"
+                tools:src="@drawable/temp_article_details" />
 
+        </FrameLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
