--- a/app/src/main/res/layout/row_sender_message.xml
+++ b/app/src/main/res/layout/row_sender_message.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/_56sdp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:paddingEnd="@dimen/default_space"
         tools:paddingBottom="@dimen/default_space"
         tools:paddingTop="@dimen/default_space">
