--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -6,6 +6,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="vm"
             type="com.tarrakki.module.support.chat.ChatVM" />
@@ -66,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/dark"
+            android:visibility="@{vm.btnSendVisibility?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toTopOf="@+id/edtMessage"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -74,6 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/white"
+            android:visibility="@{vm.btnSendVisibility?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mDivider1" />
 
@@ -81,6 +85,7 @@
             android:layout_width="1dp"
             android:layout_height="0dp"
             android:background="@color/dark"
+            android:visibility="@{vm.btnSendVisibility?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/ivSend"
             app:layout_constraintStart_toEndOf="@id/ivGallery"
@@ -95,6 +100,7 @@
             android:inputType="textMultiLine"
             android:maxLines="5"
             android:padding="@dimen/_8sdp"
+            android:visibility="@{vm.btnSendVisibility?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/openFile"
             app:layout_constraintStart_toStartOf="parent" />
@@ -106,7 +112,7 @@
             android:padding="@dimen/_6sdp"
             android:rotation="60"
             android:src="@drawable/ic_file_attachment"
-            android:visibility="@{vm.btnAttahcmentVisibility}"
+            android:visibility="@{vm.btnSendVisibility?vm.btnAttahcmentVisibility:View.GONE}"
             app:layout_constraintBottom_toBottomOf="@id/edtMessage"
             app:layout_constraintEnd_toStartOf="@id/ivGallery"
             app:layout_constraintTop_toTopOf="@id/ivGallery"
@@ -119,7 +125,7 @@
             android:layout_marginEnd="1dp"
             android:padding="@dimen/_6sdp"
             android:src="@drawable/ic_camera_black"
-            android:visibility="@{vm.btnAttahcmentVisibility}"
+            android:visibility="@{vm.btnSendVisibility?vm.btnAttahcmentVisibility:View.GONE}"
             app:layout_constraintBottom_toBottomOf="@id/edtMessage"
             app:layout_constraintEnd_toStartOf="@id/ivSend"
             app:layout_constraintTop_toTopOf="@id/ivSend" />
@@ -130,6 +136,7 @@
             android:layout_height="@dimen/_32sdp"
             android:padding="@dimen/_6sdp"
             android:src="@drawable/ic_send_msg"
+            android:visibility="@{vm.btnSendVisibility?View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toBottomOf="@id/edtMessage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/view"
