--- a/app/src/main/res/layout/fragment_question_details.xml
+++ b/app/src/main/res/layout/fragment_question_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -16,7 +17,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -33,16 +34,25 @@
                 android:layout_height="1dp"
                 android:background="@color/dark" />
 
-            <TextView
+            <WebView
+                android:id="@+id/mWebView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/default_space"
+                android:background="@drawable/shape_cart_view"
+                android:elevation="2dp"
+                android:nestedScrollingEnabled="false"
+                app:HTML="@{vm.question.answer}" />
+            <!--<TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="2dp"
                 android:padding="@dimen/_8sdp"
-                android:text="@{vm.question.answer}"
+                HTML="@{vm.question.answer}"
                 android:textColor="@color/semi_black"
-                tools:text="AutoPay is a one-time registration process of seting a payment instruction with your verified Bank Account, where you authorize Tarrakki Zyaada to automate your payments/investments." />
+                tools:text="AutoPay is a one-time registration process of seting a payment instruction with your verified Bank Account, where you authorize Tarrakki Zyaada to automate your payments/investments." />-->
 
             <TextView
                 android:layout_width="wrap_content"
